Добавил статус дружбы и подтвержление дружбы